--- a/src/style.scss
+++ b/src/style.scss
@@ -3,14 +3,21 @@
   font-family: "Gilroy";
   src: url("/src/Gilroy-Light.woff")
     format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Gilroy";
+  src: url("/src/Gilroy-Regular.woff")
+    format("woff");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: "Gilroy";
-  src: url("/src/Gilroy-ExtraBold.woff")
+  src: url("/src/Gilroy-Medium.woff")
     format("woff");
-  font-weight: 700;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -19,6 +26,7 @@ body {
   padding: 20px;
   background-color: #000;
   color: white;
+  font-family: 'Gilroy', sans-serif !important;
 }
 
 .grid {
