--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,21 @@
 @font-face {
   font-family: "Gilroy";
   src: url("/src/Gilroy-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gilroy";
+  src: url("/src/Gilroy-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Gilroy";
-  src: url("/src/Gilroy-ExtraBold.woff") format("woff");
-  font-weight: 700;
+  src: url("/src/Gilroy-Medium.woff") format("woff");
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -17,6 +24,7 @@ body {
   padding: 20px;
   background-color: #000;
   color: white;
+  font-family: 'Gilroy', sans-serif !important;
 }
 
 .grid {
