--- a/src/style.css
+++ b/src/style.css
@@ -185,4 +185,15 @@ body {
           column-gap: 1rem;
   row-gap: 1rem;
 }
+
+.temp_prop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 5px;
+          column-gap: 5px;
+}
 /*# sourceMappingURL=style.css.map */
