--- a/src/style.css
+++ b/src/style.css
@@ -114,6 +114,7 @@ body {
 .temp_value {
   font-size: 48px;
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .temp_value:after {
@@ -193,7 +194,42 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-column-gap: 5px;
-          column-gap: 5px;
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+}
+
+.grid_header {
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+.family_status {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.family_status.family_person {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 10px 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  font-size: 16px;
+}
+
+.family_status.offline {
+  opacity: 0.3 !important;
 }
 /*# sourceMappingURL=style.css.map */
