--- a/src/style.css
+++ b/src/style.css
@@ -38,8 +38,6 @@ body {
       grid-template-rows: repeat(3, auto);
   -ms-grid-columns: (auto)[6];
       grid-template-columns: repeat(6, auto);
-  /*grid-auto-columns: 1fr;
-  grid-auto-rows: 1fr;*/
   width: 100%;
   height: 90vh;
 }
@@ -78,6 +76,16 @@ body {
   -ms-grid-column: 1;
   -ms-grid-column-span: 1;
   grid-area: 2 / 1 / 3 / 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .grid-item.item-3 {
