--- a/src/style.scss
+++ b/src/style.scss
@@ -36,8 +36,6 @@ body {
   grid-row-gap: 1rem;
   grid-template-rows: repeat(3, auto);
   grid-template-columns: repeat(6, auto);
-  /*grid-auto-columns: 1fr;
-  grid-auto-rows: 1fr;*/
   width: 100%;
   height: 90vh;
 }
@@ -59,6 +57,9 @@ body {
 
   &.item-2 {
     grid-area: 2 / 1 / 3 / 2;
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
   }
 
   &.item-3 {
