--- a/src/style.css
+++ b/src/style.css
@@ -211,16 +211,21 @@ body {
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
+  margin-bottom: 20px;
 }
 
 .family_status {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 10px;
 }
 
 .family_status .family_person {
