--- a/src/style.scss
+++ b/src/style.scss
@@ -134,10 +134,13 @@ body {
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
+  margin-bottom: 20px;
 }
 .family_status {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
   .family_person {
     display: inline-flex;
     padding: 10px 20px;
