--- a/src/style.css
+++ b/src/style.css
@@ -147,6 +147,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   font-size: 16px;
+  margin-bottom: 20px;
 }
 
 .temp_fact {
@@ -175,7 +176,6 @@ body {
   gap: 10px;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.1);
-  margin-top: 20px;
 }
 
 .temp_icon {
@@ -193,6 +193,7 @@ body {
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
   row-gap: 1rem;
+  max-width: 300px;
 }
 
 .temp_prop {
@@ -244,5 +245,208 @@ body {
 
 .family_status .offline {
   opacity: 0.3 !important;
+}
+
+.grid-link {
+  display: block;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  color: #fff;
+  text-decoration: none;
+  border-color: transparent;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+.grid-link span {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.grid-link:hover {
+  border: 1px solid rgba(91, 91, 91, 0.3);
+}
+
+.grid-link:hover img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.grid-link img {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.room_line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  gap: 20px;
+}
+
+.room_line .room_prop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 170px;
+}
+
+.room_line .room_prop .room_prop_header {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.room_line .room_prop .room_device {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 15px 20px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  gap: 30px 10px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.room_line .room_prop .room_device img {
+  padding: 5px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 40px;
+}
+
+.room_line .room_prop .room_device .device_value {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+.room_line .room_prop .room_device .device_value input {
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  border: none;
+  padding-inline: 10px;
+  color: #fff;
+  font-size: 20px;
+  width: 60px;
+}
+
+.room_line .room_prop .room_device a {
+  color: #fff;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+.room_line .room_prop .room_device a:hover {
+  opacity: 0.6;
+}
+
+.room_line .room_prop .device_off {
+  opacity: 0.3;
+}
+
+.grid-3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  row-gap: 1rem;
+}
+
+.grid-3 .grid_cam {
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 20px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  gap: 10px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  border-radius: 30px;
+  background: rgba(255, 255, 255, 0.1);
+  width: 400px;
+  background-position: center;
+  background-size: contain;
+  -webkit-transition: all 0.3s ease-in-out;
+}
+
+.grid-3 .grid_cam:hover {
+  background-size: 120%;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.grid-3 .grid_cam .cam_label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  border-radius: 20px;
+  background: rgba(41, 41, 41, 0.8);
+}
+
+.grid-3 .cam1 {
+  background-image: url("/src/image 17.png");
+}
+
+.grid-3 .cam2 {
+  background-image: url("/src/image 18.png");
 }
 /*# sourceMappingURL=style.css.map */
