--- a/src/style.scss
+++ b/src/style.scss
@@ -97,6 +97,7 @@ body {
   flex-direction: row;
   align-items: center;
   font-size: 16px;
+  margin-bottom: 20px;
 }
 .temp_fact {
   display: flex;
@@ -113,7 +114,6 @@ body {
   gap: 10px;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.1);
-  margin-top: 20px;
 }
 .temp_icon {
   margin-right: 10px;
@@ -123,6 +123,7 @@ body {
   flex-direction: column;
   column-gap: 1rem;
   row-gap: 1rem;
+  max-width: 300px;
 }
 .temp_prop {
   display: flex;
@@ -152,5 +153,138 @@ body {
   }
   .offline {
     opacity: 0.3 !important;
+  }
+}
+
+.grid-link {
+  display: block;
+  display: inline-flex;
+  padding: 15px;
+  align-items: center;
+  gap: 20px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.10);
+  color: #fff;
+  text-decoration: none;
+  border-color: transparent;
+  transition: 0.2s linear;
+  span {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  &:hover {
+    border: 1px solid rgba(91, 91, 91, 0.3);
+    img {
+      transform: scale(1.1);
+    }
+  }
+  img {
+    transition: 0.2s;
+  }
+}
+.room_line {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  .room_prop {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 170px;
+    .room_prop_header {
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+    .room_device {
+      display: flex;
+      flex-direction: column;
+      padding: 15px 20px;
+      align-items: flex-start;
+      align-content: flex-start;
+      gap: 30px 10px;
+      flex-wrap: wrap;
+      border-radius: 20px;
+      background: rgba(255, 255, 255, 0.10);
+      img {
+        padding: 5px;
+        background: rgba(255, 255, 255, 0.20);
+        border-radius: 40px;
+      }
+      .device_value {
+        display: flex;
+        gap: 10px;
+        input {
+          border-radius: 20px;
+          background: rgba(255, 255, 255, 0.20);
+          border: none;
+          padding-inline: 10px;
+          color: #fff;
+          font-size: 20px;
+          width: 60px;
+        }
+      }
+      a {
+        color: #fff;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        text-transform: uppercase;
+        text-decoration: none;
+        transition: 0.2s linear;
+        &:hover {
+          opacity: 0.6;
+        }
+      }
+    }
+    .device_off {
+      opacity: 0.3;
+    }
+  }
+}
+
+
+.grid-3 {
+  display: flex;
+  flex-direction: column;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  .grid_cam {
+    height: 200px;
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.10);
+    width: 400px;
+    background-position: center;
+    background-size: contain;
+    -webkit-transition: all 0.3s ease-in-out;
+    &:hover {
+      background-size: 120%;
+      transition: all 0.3s ease-in-out;
+    }
+    .cam_label {
+      display: flex;
+      padding: 10px;
+      align-items: center;
+      gap: 10px;
+      border-radius: 20px;
+      background: rgba(41, 41, 41, 0.80);
+    }
+  }
+  .cam1 {
+    background-image: url("/src/image 17.png");
+  }
+  .cam2 {
+    background-image: url("/src/image 18.png");
   }
 }
