--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Gilroy";
   src: url("/src/Gilroy-Light.woff") format("woff");
@@ -19,9 +20,25 @@
   font-style: normal;
 }
 
+@media screen and (min-width: 1201px) {
+  ::-webkit-scrollbar-thumb {
+    /* Укажи цвет скроллбара */
+    background: rgba(255, 255, 255, 0.2);
+    /* Укажи радиус скругления скроллбара */
+    border-radius: 100px;
+  }
+  ::-webkit-scrollbar {
+    /* Укажи ширину вертикального скроллбара */
+    width: 10px;
+    /* Укажи высоту горизонтального скроллбара 
+      height: 15px;*/
+    /* Укажи цвет фона под скроллбаром */
+    background: transparent;
+  }
+}
+
 body {
   margin: 0;
-  padding: 20px;
   background-color: #000;
   color: white;
   font-family: 'Gilroy', sans-serif !important;
@@ -38,8 +55,9 @@ body {
       grid-template-rows: repeat(3, auto);
   -ms-grid-columns: (auto)[6];
       grid-template-columns: repeat(6, auto);
-  width: 100%;
+  width: 97vw;
   height: 90vh;
+  padding: 20px;
 }
 
 .grid-item {
@@ -102,6 +120,8 @@ body {
   -ms-grid-column: 2;
   -ms-grid-column-span: 3;
   grid-area: 1 / 2 / 4 / 5;
+  overflow-y: scroll;
+  width: 100%;
 }
 
 .grid-item.item-5 {
@@ -176,6 +196,8 @@ body {
   gap: 10px;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.1);
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .temp_icon {
@@ -219,10 +241,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
@@ -295,7 +319,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 30px;
 }
 
 .room_line .room_prop {
@@ -310,6 +337,7 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 170px;
+  gap: 20px;
 }
 
 .room_line .room_prop .room_prop_header {
@@ -317,6 +345,38 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.room_line .room_prop .lightswitch_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+.room_line .room_prop .lightswitch_container .lightswitch {
+  padding: 10px !important;
+  gap: 10px !important;
+}
+
+.room_line .room_prop .lightswitch_container .lightswitch img {
+  width: 18px !important;
+}
+
+.room_line .room_prop .lightswitch_container .lightswitch .light_slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+
+.room_line .room_prop .lightswitch_container .lightswitch .light_slider img {
+  background: none;
+  padding: 0;
 }
 
 .room_line .room_prop .room_device {
@@ -351,6 +411,9 @@ body {
   display: -ms-flexbox;
   display: flex;
   gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .room_line .room_prop .room_device .device_value input {
@@ -424,7 +487,7 @@ body {
 }
 
 .grid-3 .grid_cam:hover {
-  background-size: 120%;
+  background-size: 110%;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
@@ -448,5 +511,336 @@ body {
 
 .grid-3 .cam2 {
   background-image: url("/src/image 18.png");
+}
+
+input[type="range"] {
+  -webkit-appearance: none !important;
+  /*Needed to reset default slider styles */
+  width: 100%;
+  height: 5px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: auto;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  padding: 0 !important;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  input[type="range"] {
+    overflow: hidden;
+    -webkit-appearance: none;
+    background-color: rgba(255, 255, 255, 0.3);
+  }
+  input[type="range"]::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    color: #444;
+    -webkit-transition: -webkit-box-shadow 0.2s ease-in-out;
+    transition: -webkit-box-shadow 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+  }
+  input[type="range"]::-webkit-slider-thumb {
+    width: 40px;
+    -webkit-appearance: none;
+    cursor: ew-resize;
+    background: #fff;
+    -webkit-box-shadow: -340px 0 0 320px #ffffff, inset 0 0 0 40px #ffffff;
+            box-shadow: -340px 0 0 320px #ffffff, inset 0 0 0 40px #ffffff;
+    border-radius: 50%;
+    -webkit-transition: -webkit-box-shadow 0.2s ease-in-out;
+    transition: -webkit-box-shadow 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+    position: relative;
+  }
+  input[type="range"]:active::-webkit-slider-thumb {
+    background: #fff;
+    -webkit-box-shadow: -340px 0 0 320px #ffffff, inset 0 0 0 3px #ffffff;
+            box-shadow: -340px 0 0 320px #ffffff, inset 0 0 0 3px #ffffff;
+  }
+}
+
+input[type="range"]::-moz-range-progress {
+  background-color: #43e5f7;
+}
+
+input[type="range"]::-moz-range-track {
+  background-color: #9a905d;
+}
+
+input[type="range"]::-ms-fill-lower {
+  background-color: #43e5f7;
+}
+
+input[type="range"]::-ms-fill-upper {
+  background-color: #9a905d;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 30px;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+  background-color: #e6e6e6;
+}
+
+input[type="range"]::-webkit-slider-thumb:active {
+  -webkit-box-shadow: 0px 0px 1px #d9d9d9;
+          box-shadow: 0px 0px 1px #d9d9d9;
+}
+
+.header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  height: 70px;
+  padding: 0 20px;
+  white-space: nowrap;
+  background: #141414;
+}
+
+@media screen and (max-width: 480px) {
+  .header {
+    padding: 0 16px;
+  }
+}
+
+.header-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 20px;
+}
+
+.header-menu a {
+  padding: 20px 30px;
+  text-decoration: none;
+  color: var(--inactive-color);
+  border-bottom: 2px solid transparent;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@media screen and (max-width: 610px) {
+  .header-menu a:not(.main-header-link) {
+    display: none;
+  }
+}
+
+.header-menu a.is-active, .header-menu a:hover {
+  color: #fff;
+  border-bottom: 2px solid #fff;
+}
+
+.notify {
+  position: relative;
+}
+
+.notify:before {
+  content: "";
+  position: absolute;
+  background-color: #ffffff;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  right: 20px;
+  top: 16px;
+}
+
+@media screen and (max-width: 1055px) {
+  .notify {
+    display: none;
+  }
+}
+
+.menu-circle {
+  width: 15px;
+  height: 15px;
+  background-color: #f96057;
+  border-radius: 50%;
+  -webkit-box-shadow: 24px 0 0 0 #f8ce52, 48px 0 0 0 #5fcf65;
+          box-shadow: 24px 0 0 0 #f8ce52, 48px 0 0 0 #5fcf65;
+  margin-right: 195px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+@media screen and (max-width: 945px) {
+  .menu-circle {
+    display: none;
+  }
+}
+
+.search-bar {
+  height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  max-width: 400px;
+  padding-left: 16px;
+  border-radius: 4px;
+}
+
+.search-bar input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  background-color: #2C2C2C;
+  border-radius: 4px;
+  font-size: 15px;
+  font-weight: 500;
+  padding: 0 20px 0 40px;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966' fill='%23717790c7'%3e%3cpath d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3e%3c/svg%3e");
+  background-size: 14px;
+  background-repeat: no-repeat;
+  background-position: 16px 48%;
+  color: #fff;
+}
+
+.search-bar input::-webkit-input-placeholder {
+  font-family: var(--body-font);
+  color: var(--inactive-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.search-bar input:-ms-input-placeholder {
+  font-family: var(--body-font);
+  color: var(--inactive-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.search-bar input::-ms-input-placeholder {
+  font-family: var(--body-font);
+  color: var(--inactive-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.search-bar input::placeholder {
+  font-family: var(--body-font);
+  color: var(--inactive-color);
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.header-profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 16px 0 40px;
+  margin-left: auto;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  gap: 20px;
+}
+
+.header-profile svg {
+  width: 22px;
+  color: #f9fafb;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.wiki,
+.questions {
+  position: relative;
+}
+
+.wiki-number,
+.questions-number {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  font-size: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #fff;
+  right: -6px;
+  top: -6px;
+}
+
+.wiki + svg,
+.questions + svg {
+  margin-left: 22px;
+}
+
+@media screen and (max-width: 945px) {
+  .wiki + svg,
+  .questions + svg {
+    display: none;
+  }
+}
+
+.time {
+  font-size: 20px;
+  font-weight: 300;
+  padding-left: 20px;
+  border-left: 1px solid #d8d8d846;
+}
+
+.time span {
+  color: #8C8C8C;
+}
+
+.time span b {
+  color: #fff;
+}
+
+.profile-img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border: 2px solid #fff;
+  margin-left: 22px;
+}
+
+.wide .header-menu,
+.wide .header-profile {
+  display: none;
+}
+
+.wide .search-bar {
+  max-width: 600px;
+  margin: auto;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-box-shadow: 0 0 0 1px #fff;
+          box-shadow: 0 0 0 1px #fff;
+  padding-left: 0;
+}
+
+.wide .menu-circle {
+  margin-right: 0;
 }
 /*# sourceMappingURL=style.css.map */
