--- a/src/style.scss
+++ b/src/style.scss
@@ -21,9 +21,25 @@
   font-style: normal;
 }
 
+@media screen and (min-width: 1201px) {
+  ::-webkit-scrollbar-thumb {
+      /* Укажи цвет скроллбара */
+      background: rgba(255, 255, 255, 0.20);
+      /* Укажи радиус скругления скроллбара */
+      border-radius: 100px;
+  }
+  ::-webkit-scrollbar {
+      /* Укажи ширину вертикального скроллбара */
+      width: 10px;
+      /* Укажи высоту горизонтального скроллбара 
+      height: 15px;*/
+      /* Укажи цвет фона под скроллбаром */
+      background: transparent;
+  }
+}
+
 body {
   margin: 0;
-  padding: 20px;
   background-color: #000;
   color: white;
   font-family: 'Gilroy', sans-serif !important;
@@ -36,8 +52,9 @@ body {
   grid-row-gap: 1rem;
   grid-template-rows: repeat(3, auto);
   grid-template-columns: repeat(6, auto);
-  width: 100%;
+  width: 97vw;
   height: 90vh;
+  padding: 20px;
 }
 
 .grid-item {
@@ -68,6 +85,8 @@ body {
 
   &.item-4 {
     grid-area: 1 / 2 / 4 / 5;
+    overflow-y: scroll;
+    width: 100%;
   }
 
   &.item-5 {
@@ -114,6 +133,7 @@ body {
   gap: 10px;
   border-radius: 20px;
   background: rgba(255, 255, 255, 0.1);
+  justify-content: space-around;
 }
 .temp_icon {
   margin-right: 10px;
@@ -139,7 +159,8 @@ body {
 }
 .family_status {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
   align-items: flex-start;
   gap: 10px;
   .family_person {
@@ -187,17 +208,40 @@ body {
 .room_line {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 30px;
   .room_prop {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 170px;
+    gap: 20px;
     .room_prop_header {
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
       line-height: normal;
+    }
+    .lightswitch_container {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .lightswitch {
+        padding: 10px !important;
+        gap: 10px !important;
+        img {
+          width: 18px !important;
+        }
+        .light_slider {
+          display: flex;
+          gap: 10px;
+          img {
+            background: none;
+            padding: 0;
+          }
+        }
+      }
     }
     .room_device {
       display: flex;
@@ -217,6 +261,7 @@ body {
       .device_value {
         display: flex;
         gap: 10px;
+        align-items: center;
         input {
           border-radius: 20px;
           background: rgba(255, 255, 255, 0.20);
@@ -269,7 +314,7 @@ body {
     background-size: contain;
     -webkit-transition: all 0.3s ease-in-out;
     &:hover {
-      background-size: 120%;
+      background-size: 110%;
       transition: all 0.3s ease-in-out;
     }
     .cam_label {
@@ -288,3 +333,243 @@ body {
     background-image: url("/src/image 18.png");
   }
 }
+
+input[type="range"] {
+  -webkit-appearance: none !important; /*Needed to reset default slider styles */
+  width: 100%;
+  height: 5px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: auto;
+  transition: all 0.3s ease;
+  padding: 0 !important;
+  // Chrome
+	@media screen and (-webkit-min-device-pixel-ratio:0) {
+		& {
+			overflow: hidden;
+			-webkit-appearance: none;
+			background-color: rgba(255, 255, 255, 0.30);
+		}
+		&::-webkit-slider-runnable-track {
+			-webkit-appearance: none;
+			color: #444;
+			// margin-top: -1px;
+			transition: box-shadow 0.2s ease-in-out;
+		}
+		&::-webkit-slider-thumb {
+			width: 40px;
+			-webkit-appearance: none;
+			cursor: ew-resize;
+			background: #fff;
+			box-shadow: -340px 0 0 320px #ffffff, inset 0 0 0 40px #ffffff;
+			border-radius: 50%;
+			transition: box-shadow 0.2s ease-in-out;
+			position: relative;
+			// top: 1px;
+		}
+		&:active::-webkit-slider-thumb {
+			background: #fff;
+			box-shadow: -340px 0 0 320px #ffffff, inset 0 0 0 3px #ffffff;
+		}
+	}
+  // Firefox
+	&::-moz-range-progress {
+		background-color: #43e5f7; 
+	}
+	&::-moz-range-track {  
+		background-color: #9a905d;
+	}
+	// IE
+	&::-ms-fill-lower {
+		background-color: #43e5f7; 
+	}
+	&::-ms-fill-upper {  
+		background-color: #9a905d;
+	}
+}
+  
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 30px;
+  transition: all 0.5s ease;
+  &:hover {
+    background-color: darken(#fff, 10%)  
+  }
+  &:active{
+    box-shadow: 0px 0px 1px darken(#fff, 15%)
+  }
+}
+
+
+.header {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  height: 70px;
+  padding: 0 20px;
+  white-space: nowrap;
+  background: #141414;
+  @media screen and (max-width: 480px) {
+   padding: 0 16px;
+  }
+  &-menu {
+   display: flex;
+   align-items: center;
+   font-size: 20px;
+   a {
+    padding: 20px 30px;
+    text-decoration: none;
+    color: var(--inactive-color);
+    border-bottom: 2px solid transparent;
+    transition: 0.3s;
+    @media screen and (max-width: 610px) {
+     &:not(.main-header-link) {
+      display: none;
+     }
+    }
+    &.is-active,
+    &:hover {
+     color: #fff;
+     border-bottom: 2px solid #fff;
+    }
+   }
+  }
+ }
+ .notify {
+  position: relative;
+  &:before {
+   content: "";
+   position: absolute;
+   background-color: #ffffff;
+   width: 6px;
+   height: 6px;
+   border-radius: 50%;
+   right: 20px;
+   top: 16px;
+  }
+  @media screen and (max-width: 1055px) {
+   display: none;
+  }
+ }
+ 
+ .menu-circle {
+  width: 15px;
+  height: 15px;
+  background-color: #f96057;
+  border-radius: 50%;
+  box-shadow: 24px 0 0 0 #f8ce52, 48px 0 0 0 #5fcf65;
+  margin-right: 195px;
+  flex-shrink: 0;
+  @media screen and (max-width: 945px) {
+   display: none;
+  }
+ }
+ 
+ .search-bar {
+  height: 40px;
+  display: flex;
+  width: 100%;
+  max-width: 400px;
+  padding-left: 16px;
+  border-radius: 4px;
+  input {
+   width: 100%;
+   height: 100%;
+   border: none;
+   background-color: #2C2C2C;
+   border-radius: 4px;
+   font-size: 15px;
+   font-weight: 500;
+   padding: 0 20px 0 40px;
+   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966' fill='%23717790c7'%3e%3cpath d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3e%3c/svg%3e");
+   background-size: 14px;
+   background-repeat: no-repeat;
+   background-position: 16px 48%;
+   color: #fff;
+   &::placeholder {
+    font-family: var(--body-font);
+    color: var(--inactive-color);
+    font-size: 15px;
+    font-weight: 500;
+   }
+  }
+ }
+ 
+ 
+ 
+ .header-profile {
+  display: flex;
+  align-items: center;
+  padding: 0 16px 0 40px;
+  margin-left: auto;
+  flex-shrink: 0;
+  gap: 20px;
+  svg {
+   width: 22px;
+   color: #f9fafb;
+   flex-shrink: 0;
+  }
+ }
+ 
+ .wiki,
+ .questions {
+  position: relative;
+  &-number {
+   position: absolute;
+   width: 16px;
+   height: 16px;
+   border-radius: 50%;
+   font-size: 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: #fff;
+   right: -6px;
+   top: -6px;
+  }
+  & + svg {
+   margin-left: 22px;
+   @media screen and (max-width: 945px) {
+    display: none;
+   }
+  }
+ }
+ .time {
+  font-size: 20px;
+  font-weight: 300;
+  padding-left: 20px;
+  border-left: 1px solid #d8d8d846;
+  span {
+    color: #8C8C8C;
+    b {
+      color: #fff;
+    }
+  }
+ }
+ .profile-img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #fff;
+  margin-left: 22px;
+ }
+ .wide {
+  .header-menu,
+  .header-profile {
+   display: none;
+  }
+  .search-bar {
+   max-width: 600px;
+   margin: auto;
+   transition: 0.4s;
+   box-shadow: 0 0 0 1px #fff;
+   padding-left: 0;
+  }
+  .menu-circle {
+   margin-right: 0;
+  }
+ }
