--- a/src/style.css
+++ b/src/style.css
@@ -336,10 +336,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 170px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 200px;
   gap: 20px;
 }
 
@@ -366,6 +366,10 @@ body {
   gap: 10px !important;
 }
 
+.room_line .room_prop .lightswitch_container .lightswitch .device_value {
+  cursor: pointer;
+}
+
 .room_line .room_prop .lightswitch_container .lightswitch img {
   width: 18px !important;
 }
@@ -386,17 +390,20 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding: 15px 20px;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 15px 15px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-line-pack: start;
       align-content: flex-start;
-  gap: 30px 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 10px 5px;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   border-radius: 20px;
@@ -413,10 +420,31 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 10px;
+  gap: 5px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.room_line .room_prop .room_device .device_value .device_temp:after {
+  content: "\00B0";
+}
+
+.room_line .room_prop .room_device .device_value a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 30px;
+  padding: 2px 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 5px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 .room_line .room_prop .room_device .device_value input {
@@ -522,7 +550,7 @@ input[type="range"] {
   -webkit-appearance: none !important;
   /*Needed to reset default slider styles */
   width: 100%;
-  height: 5px;
+  height: 10px;
   background-color: #fff;
   border-radius: 10px;
   margin: auto;
@@ -856,5 +884,54 @@ input[type="range"]::-webkit-slider-thumb:active {
   .temp_value {
     font-size: 36px;
   }
+}
+
+.toggle {
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  background-color: #bdc1c8;
+  width: 50px;
+  height: 30px;
+  border-radius: 20px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.toggle::before {
+  content: '';
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  margin: 3px;
+  border-radius: 100%;
+  background-color: #FFFFFF;
+  top: 0%;
+  left: 0%;
+}
+
+.toggle:hover {
+  cursor: pointer;
+}
+
+.toggle.active {
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  background-color: #29b5a8;
+}
+
+.toggle.active::before {
+  -webkit-transition: all .5s;
+  transition: all .5s;
+  left: 40%;
 }
 /*# sourceMappingURL=style.css.map */
