--- a/src/style.scss
+++ b/src/style.scss
@@ -217,8 +217,10 @@ body {
   .room_prop {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    width: 170px;
+    //justify-content: space-between;
+    justify-content: flex-end;
+    //width: 170px;
+    width: 200px;
     gap: 20px;
     .room_prop_header {
       font-size: 20px;
@@ -233,6 +235,9 @@ body {
       .lightswitch {
         padding: 10px !important;
         gap: 10px !important;
+        .device_value {
+          cursor: pointer;
+        }
         img {
           width: 18px !important;
         }
@@ -248,11 +253,14 @@ body {
     }
     .room_device {
       display: flex;
-      flex-direction: column;
-      padding: 15px 20px;
-      align-items: flex-start;
+      //flex-direction: column;
+      flex-direction: row;
+      padding: 15px 15px;
+      //align-items: flex-start;
+      align-items: center;
       align-content: flex-start;
-      gap: 30px 10px;
+      justify-content: space-between;
+      gap: 10px 5px;
       flex-wrap: wrap;
       border-radius: 20px;
       background: rgba(255, 255, 255, 0.10);
@@ -263,8 +271,22 @@ body {
       }
       .device_value {
         display: flex;
-        gap: 10px;
+        gap: 5px;
         align-items: center;
+        .device_temp:after {
+          content: "\00B0";
+        }
+        a {
+          display: flex;
+          height: 30px;
+          padding: 2px 10px;
+          justify-content: center;
+          align-items: center;
+          //font-size: 14px;
+          gap: 5px;
+          border-radius: 20px;
+          background: rgba(255, 255, 255, 0.10);
+        }
         input {
           border-radius: 20px;
           background: rgba(255, 255, 255, 0.20);
@@ -342,7 +364,8 @@ body {
 input[type="range"] {
   -webkit-appearance: none !important; /*Needed to reset default slider styles */
   width: 100%;
-  height: 5px;
+  //height: 5px;
+  height: 10px;
   background-color: #fff;
   border-radius: 10px;
   margin: auto;
@@ -587,3 +610,44 @@ input[type="range"]::-webkit-slider-thumb {
     font-size: 36px;
   }
  }
+
+ .toggle{
+  transition: all .5s;
+  background-color: #bdc1c8;
+  width: 50px;
+  height: 30px;
+  border-radius: 20px;
+  position: relative;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+ .toggle::before{
+   content: '';
+   transition: all .5s;
+   position: absolute;
+   width: 24px;
+   height: 24px;
+   margin: 3px;
+   border-radius: 100%;
+   background-color: #FFFFFF;
+   top: 0%;
+   left: 0%;
+   
+}
+
+.toggle:hover{
+  cursor: pointer;
+}
+
+.toggle.active{
+  transition: all .5s;
+  background-color: #29b5a8;
+}
+
+.toggle.active::before{
+  transition: all .5s;
+  left: 40%;
+}
